--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
+          <a href="py-modindex.html" title="Python Module Index"
+             >modules</a> |</li>
+        <li class="right" >
+          <a href="np-modindex.html" title="Python Module Index"
+             >modules</a> |</li>
+        <li class="right" >
           <a href="includeme.html" title="&lt;no title&gt;"
              accesskey="N">next</a> |</li>
         <li><a href="#">flopy 3.0 documentation</a> &raquo;</li> 
@@ -87,6 +93,12 @@
         <li class="right" style="margin-right: 10px">
           <a href="genindex.html" title="General Index"
              >index</a></li>
+        <li class="right" >
+          <a href="py-modindex.html" title="Python Module Index"
+             >modules</a> |</li>
+        <li class="right" >
+          <a href="np-modindex.html" title="Python Module Index"
+             >modules</a> |</li>
         <li class="right" >
           <a href="includeme.html" title="&lt;no title&gt;"
              >next</a> |</li>
