--- a/mbase.html
+++ b/mbase.html
@@ -23,7 +23,10 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="flopy 3.0 documentation" href="index.html" /> 
+    <link rel="top" title="flopy 3.0 documentation" href="index.html" />
+    <link rel="up" title="Flopy Code" href="code.html" />
+    <link rel="next" title="flopy.modflow.mf Module" href="mf.html" />
+    <link rel="prev" title="Flopy Code" href="code.html" /> 
   </head>
   <body>
     <div class="related">
@@ -38,7 +41,15 @@
         <li class="right" >
           <a href="np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">flopy 3.0 documentation</a> &raquo;</li> 
+        <li class="right" >
+          <a href="mf.html" title="flopy.modflow.mf Module"
+             accesskey="N">next</a> |</li>
+        <li class="right" >
+          <a href="code.html" title="Flopy Code"
+             accesskey="P">previous</a> |</li>
+        <li><a href="index.html">flopy 3.0 documentation</a> &raquo;</li>
+          <li><a href="includeme.html" >Welcome to flopy&#8217;s documentation!</a> &raquo;</li>
+          <li><a href="code.html" accesskey="U">Flopy Code</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -80,6 +91,12 @@ This is needed for mfaddoutsidefile if used for more than one file.</dd>
       </div>
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
+  <h4>Previous topic</h4>
+  <p class="topless"><a href="code.html"
+                        title="previous chapter">Flopy Code</a></p>
+  <h4>Next topic</h4>
+  <p class="topless"><a href="mf.html"
+                        title="next chapter">flopy.modflow.mf Module</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="_sources/mbase.txt"
@@ -114,7 +131,15 @@ This is needed for mfaddoutsidefile if used for more than one file.</dd>
         <li class="right" >
           <a href="np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">flopy 3.0 documentation</a> &raquo;</li> 
+        <li class="right" >
+          <a href="mf.html" title="flopy.modflow.mf Module"
+             >next</a> |</li>
+        <li class="right" >
+          <a href="code.html" title="Flopy Code"
+             >previous</a> |</li>
+        <li><a href="index.html">flopy 3.0 documentation</a> &raquo;</li>
+          <li><a href="includeme.html" >Welcome to flopy&#8217;s documentation!</a> &raquo;</li>
+          <li><a href="code.html" >Flopy Code</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
