--- a/tutorials.html
+++ b/tutorials.html
@@ -23,7 +23,10 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="flopy 3.0 documentation" href="index.html" /> 
+    <link rel="top" title="flopy 3.0 documentation" href="index.html" />
+    <link rel="up" title="Welcome to flopy’s documentation!" href="includeme.html" />
+    <link rel="next" title="Tutorial 1: Confined Steady-State Flow Model" href="tutorial1.html" />
+    <link rel="prev" title="What is FloPy?" href="introduction.html" /> 
   </head>
   <body>
     <div class="related">
@@ -38,7 +41,14 @@
         <li class="right" >
           <a href="np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">flopy 3.0 documentation</a> &raquo;</li> 
+        <li class="right" >
+          <a href="tutorial1.html" title="Tutorial 1: Confined Steady-State Flow Model"
+             accesskey="N">next</a> |</li>
+        <li class="right" >
+          <a href="introduction.html" title="What is FloPy?"
+             accesskey="P">previous</a> |</li>
+        <li><a href="index.html">flopy 3.0 documentation</a> &raquo;</li>
+          <li><a href="includeme.html" accesskey="U">Welcome to flopy&#8217;s documentation!</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -76,6 +86,12 @@
       </div>
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
+  <h4>Previous topic</h4>
+  <p class="topless"><a href="introduction.html"
+                        title="previous chapter">What is FloPy?</a></p>
+  <h4>Next topic</h4>
+  <p class="topless"><a href="tutorial1.html"
+                        title="next chapter">Tutorial 1: Confined Steady-State Flow Model</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="_sources/tutorials.txt"
@@ -110,7 +126,14 @@
         <li class="right" >
           <a href="np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">flopy 3.0 documentation</a> &raquo;</li> 
+        <li class="right" >
+          <a href="tutorial1.html" title="Tutorial 1: Confined Steady-State Flow Model"
+             >next</a> |</li>
+        <li class="right" >
+          <a href="introduction.html" title="What is FloPy?"
+             >previous</a> |</li>
+        <li><a href="index.html">flopy 3.0 documentation</a> &raquo;</li>
+          <li><a href="includeme.html" >Welcome to flopy&#8217;s documentation!</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
