--- a/mf.html
+++ b/mf.html
@@ -23,7 +23,10 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="flopy 3.0 documentation" href="index.html" /> 
+    <link rel="top" title="flopy 3.0 documentation" href="index.html" />
+    <link rel="up" title="Flopy Code" href="code.html" />
+    <link rel="next" title="flopy.modpath.mp Module" href="mp.html" />
+    <link rel="prev" title="mbase Classes" href="mbase.html" /> 
   </head>
   <body>
     <div class="related">
@@ -38,7 +41,14 @@
         <li class="right" >
           <a href="np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">flopy 3.0 documentation</a> &raquo;</li> 
+        <li class="right" >
+          <a href="mp.html" title="flopy.modpath.mp Module"
+             accesskey="N">next</a> |</li>
+        <li class="right" >
+          <a href="mbase.html" title="mbase Classes"
+             accesskey="P">previous</a> |</li>
+        <li><a href="index.html">flopy 3.0 documentation</a> &raquo;</li>
+          <li><a href="code.html" accesskey="U">Flopy Code</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -258,6 +268,12 @@ parameters.  Runs model using subprocess.Popen.</p>
       </div>
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
+  <h4>Previous topic</h4>
+  <p class="topless"><a href="mbase.html"
+                        title="previous chapter">mbase Classes</a></p>
+  <h4>Next topic</h4>
+  <p class="topless"><a href="mp.html"
+                        title="next chapter">flopy.modpath.mp Module</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="_sources/mf.txt"
@@ -292,7 +308,14 @@ parameters.  Runs model using subprocess.Popen.</p>
         <li class="right" >
           <a href="np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">flopy 3.0 documentation</a> &raquo;</li> 
+        <li class="right" >
+          <a href="mp.html" title="flopy.modpath.mp Module"
+             >next</a> |</li>
+        <li class="right" >
+          <a href="mbase.html" title="mbase Classes"
+             >previous</a> |</li>
+        <li><a href="index.html">flopy 3.0 documentation</a> &raquo;</li>
+          <li><a href="code.html" >Flopy Code</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
