--- a/mfupw.html
+++ b/mfupw.html
@@ -23,7 +23,10 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="flopy 3.0 documentation" href="index.html" /> 
+    <link rel="top" title="flopy 3.0 documentation" href="index.html" />
+    <link rel="up" title="Flopy Code" href="code.html" />
+    <link rel="next" title="flopy.modflow.mfuzf1 Module" href="mfuzf1.html" />
+    <link rel="prev" title="flopy.modflow.mfswi2 Module" href="mfswi2.html" /> 
   </head>
   <body>
     <div class="related">
@@ -38,7 +41,14 @@
         <li class="right" >
           <a href="np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">flopy 3.0 documentation</a> &raquo;</li> 
+        <li class="right" >
+          <a href="mfuzf1.html" title="flopy.modflow.mfuzf1 Module"
+             accesskey="N">next</a> |</li>
+        <li class="right" >
+          <a href="mfswi2.html" title="flopy.modflow.mfswi2 Module"
+             accesskey="P">previous</a> |</li>
+        <li><a href="index.html">flopy 3.0 documentation</a> &raquo;</li>
+          <li><a href="code.html" accesskey="U">Flopy Code</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -107,6 +117,12 @@ constructed using the function
       </div>
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
+  <h4>Previous topic</h4>
+  <p class="topless"><a href="mfswi2.html"
+                        title="previous chapter">flopy.modflow.mfswi2 Module</a></p>
+  <h4>Next topic</h4>
+  <p class="topless"><a href="mfuzf1.html"
+                        title="next chapter">flopy.modflow.mfuzf1 Module</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="_sources/mfupw.txt"
@@ -141,7 +157,14 @@ constructed using the function
         <li class="right" >
           <a href="np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">flopy 3.0 documentation</a> &raquo;</li> 
+        <li class="right" >
+          <a href="mfuzf1.html" title="flopy.modflow.mfuzf1 Module"
+             >next</a> |</li>
+        <li class="right" >
+          <a href="mfswi2.html" title="flopy.modflow.mfswi2 Module"
+             >previous</a> |</li>
+        <li><a href="index.html">flopy 3.0 documentation</a> &raquo;</li>
+          <li><a href="code.html" >Flopy Code</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
